--- a/WaveDirectApp/package.json
+++ b/WaveDirectApp/package.json
@@ -21,7 +21,8 @@
     "eslint": "6.8.0",
     "jest": "25.5.4",
     "metro-react-native-babel-preset": "0.59.0",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "16.13.1",
+    "typescript": "^4.0.3"
   },
   "jest": {
     "preset": "react-native"
