--- a/WaveDirectApp/package.json
+++ b/WaveDirectApp/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "firebase": "^7.21.1",
     "react": "16.13.1",
-    "react-native": "0.63.2"
+    "react-native": "0.63.2",
+    "react-native-notifications": "^3.3.4"
   },
   "devDependencies": {
     "@babel/core": "7.11.6",
