--- a/WaveDirectApp/package.json
+++ b/WaveDirectApp/package.json
@@ -13,7 +13,9 @@
     "firebase": "^7.21.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
-    "react-native-notifications": "^3.3.4"
+    "react-native-elements": "^2.3.2",
+    "react-native-notifications": "^3.3.4",
+    "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.11.6",
