--- a/WaveDirectApp/package.json
+++ b/WaveDirectApp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/viewpager": "^4.1.6",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
     "firebase": "^7.21.1",
