--- a/WaveDirectApp/package.json
+++ b/WaveDirectApp/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/drawer": "^5.9.1",
     "@react-native-community/viewpager": "^4.1.6",
+    "@react-navigation/bottom-tabs": "^5.9.0",
+    "@react-navigation/drawer": "^5.9.1",
+    "@react-navigation/material-top-tabs": "^5.2.17",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
     "firebase": "^7.21.1",
