--- a/WaveDirectApp/package.json
+++ b/WaveDirectApp/package.json
@@ -10,9 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/drawer": "^5.9.1",
     "@react-native-community/viewpager": "^4.1.6",
+    "@react-navigation/drawer": "^5.9.1",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
     "firebase": "^7.21.1",
