--- a/WaveDirectApp/package.json
+++ b/WaveDirectApp/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "react-native start----reset-cache",
     "test": "jest",
     "lint": "eslint ."
   },
@@ -13,8 +13,8 @@
     "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/viewpager": "^4.1.6",
-    "@react-navigation/drawer": "^5.9.1",
     "@react-navigation/bottom-tabs": "^5.9.0",
+    "@react-navigation/drawer": "^5.9.1",
     "@react-navigation/material-top-tabs": "^5.2.17",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
