--- a/WaveDirectApp/package.json
+++ b/WaveDirectApp/package.json
@@ -13,8 +13,8 @@
     "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/viewpager": "^4.1.6",
-    "@react-navigation/drawer": "^5.9.1",
     "@react-navigation/bottom-tabs": "^5.9.0",
+    "@react-navigation/drawer": "^5.9.1",
     "@react-navigation/material-top-tabs": "^5.2.17",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
@@ -23,6 +23,7 @@
     "react-native": "0.63.2",
     "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-maps": "^0.27.1",
     "react-native-notifications": "^3.3.4",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
