--- a/WaveDirectApp/android/app/src/main/AndroidManifest.xml
+++ b/WaveDirectApp/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
   package="com.wavedirectapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
       android:name=".MainApplication"
@@ -22,6 +23,9 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyCYi12-E3LjIqNId5187JeMe4nTtz1Wbvc" />
     </application>
 
 </manifest>
